@startuml

Hotel --* HotelBusinessRule : hasMany
Hotel --* HotelPicture : hasMany
Hotel --* HotelSellable : hasMany
Hotel --* HotelRoomType : hasMany
Hotel --* HotelBuilding : hasMany
Hotel --* HotelOptions : has
Hotel --* HotelMarketing : has
Hotel --* HotelConfigChange : hasMany

HotelBusinessRule --* HotelBusinessObjectScope: hasOne
HotelBusinessRule --* HotelBusinessRuleEffect: hasOne
HotelBusinessRule --* HotelDateRange: validOn
HotelBusinessRule --* HotelDateRange: notValidOn
HotelSellable --* HotelPicture: hasMany
HotelSellable --* HotelRoomAttribute: hasMany
HotelRoomType --* HotelPicture: hasMany
HotelBuilding --* HotelFloor : hasMany
HotelFloor --* HotelRoom : hasMany
HotelRoom --* HotelRoomAttribute: hasMany

class Hotel {
	    Code : string	
        Name : string
        Description : string 
        CurrencyCode : string 
}

class HotelBusinessRule {
    Id : string
}

class HotelBusinessObjectScope {
    Type : string
    Id : string 
}

class HotelBusinessRuleEffect {
    EffectType : string
    Available : bool
    PriceImpact: int64
    PriceUpdateUnit : string
}

class HotelDateRange  {
    From : string
    To : string
    Dow : []string
}

class HotelPicture {
        Id string
        RawData string
        Format string
        Url string
        Tags []string
        Main bool
        PictureItemCode string 
}

class HotelSellable {
    Code : string 
    Category: string 
    Name : string
    Quantity : int64 
    InventoryType : string
    PricePerUnit : float64 
    Description : string 

}

class HotelRoomType {
    Code string
    Name string
    LowPrice float64
    MedPrice float64
    HighPrice float64
    Description string
}

class HotelRoomAttribute {
    Code : string
    Name : string
    Description : string
    PriceImpact :  float64
    PriceUpdateUnit : string
    Category : string
}

class HotelOptions {
        Bookable : bool
        Shoppable : bool
}

class HotelMarketing {
        DefaultTagLine : string
        DefaultDescription : string
}

class HotelBuilding {
        Name : string
}

class HotelFloor {
        Num : int32
}

class HotelRoom {
        Number : int64
        Name : string
        Type : string
}

class HotelConfigChange {
    TimeStamp string
    EventName string  
    ObjectName string  
    FieldName string
    OldValue string
    NewValue string
    HumanReadableComment string
}
@enduml